--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,11 @@
+/* Banner */
 div.banner {
   width: 100%;
-}
-
-div.banner img {
-  width: 100%;
+  height: 50vh;
+  background-image: url('../img/banner.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 div.productos {
@@ -15,7 +17,7 @@ div.productos {
 }
 
 div.productos div.producto {
-  width: 24%;
+  width: 20%;
 }
 
 div.productos div.producto div.imgProducto {
