--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,13 @@
 @import url('header.css');
+@import url('footer.css');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
