Acomodo Footer, inicio Account.php

--- a/css/general.css
+++ b/css/general.css
@@ -8,6 +8,22 @@
   font-family: 'Lato', sans-serif;
 }
 
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  margin-bottom: 85px;
+}
+
+footer {
+  position: absolute;
+  bottom:0;
+  width: 100%;
+}
+
+
 a {
   text-decoration: none;
 }
